--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
+    "jquery": "^3.7.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/plugin-transform-private-methods": "^7.23.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.1",
     "webpack-dev-server": "^3"
   }
 }
